test/files/neg/spore-test-neg1.check
spore-test-neg1.scala:9: error: Only val defs allowed at this position
    println("hi")
           ^
one error found
